test/fail/not-static.mo
import _ = "lib/not-static"
